force-app/main/default/objects/BatchEntry__c/BatchEntry__c.object-meta.xml
<CustomObject>
    <label>NPSPBatchEntry</label>
    <nameField>
        <label>BatchEntry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BatchEntrys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>