force-app/main/default/objects/BatchEntry__c/fields/BatchId__c.field-meta.xml
<CustomField>
    <fullName>BatchId__c</fullName>
    <label>BatchId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>