force-app/main/default/objects/BatchEntry__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>BatchEntrys</relationshipLabel>
    <relationshipName>BatchEntrys</relationshipName>
    <type>Lookup</type>
</CustomField>