force-app/main/default/objects/BatchEntry__c/fields/ChequeNumber__c.field-meta.xml
<CustomField>
    <fullName>ChequeNumber__c</fullName>
    <label>ChequeNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>