force-app/main/default/objects/BatchEntry__c/fields/DonationDate__c.field-meta.xml
<CustomField>
    <fullName>DonationDate__c</fullName>
    <label>DonationDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>